# Game

./: .clang-format  CMakeLists.txt  Cấu trúc tạm thời (1).xmind  LICENSE  README.md  SettingsManager.txt
BaiTapLonGAme/: build.bat
BaiTapLonGAme/src/: main.cpp
BaiTapLonGAme/src/Core/: GameLoop.cpp  GameLoop.h  Input.cpp  Input.h  Render.cpp  Render.h  Window.cpp  Window.h
Docs/: Cấu trúc game- 1.0.1.xmind  Cấu trúc game-1.1.0.xmind
assets/Images/: Da1.aseprite
data/: Scores.txt  SettingsManager.txt  data.json
include/Core/: Constants.h
include/Core/Audio/: Audio.h  MusicManager.h
include/Core/GameLoop/: game.h  json.h
include/Core/Input/: Input.h  SettingsManager.h
include/GamePlay/Avatar/: player.h
include/GamePlay/Entity/: Dinosaur.h  Entity.h  Meteor.h
include/GamePlay/Gun/: Trap.h  bullet.h  gun.h
include/GamePlay/Map/: map.h
include/GamePlay/Physics/: PhysicsSystem.h
include/GamePlay/UI/: Animation.h  Scores.h  StateUI.h  UI.h
include/Utils/: Constants.h  Entity.h  GameSate.h
src/: game.cpp  main.cpp
src/Core/Audio/: Audio.cpp  MusicManager.cpp
src/Core/GameLoop/: gameloop.cpp
src/Core/Input/: Input.cpp  SettingsManager.cpp
src/GamePlay/Avatar/: player.cpp
src/GamePlay/Entity/: Dinosaur.cpp  Entity.cpp  Meteor.cpp
src/GamePlay/Gun/: Trap.cpp  bullet.cpp  gun.cpp
src/GamePlay/Map/: map1.cpp
src/GamePlay/Physics/: PhysicsSystem.cpp
src/GamePlay/UI/: Animation.cpp  Scores.cpp  StateUI.cpp  UI.cpp  state.cpp
src/Utils/: Entity.cpp  json.cpp
